Changelog 1.6.8:
Tighten and speed up PM cloud file inspection
Multiple fixes to TMDb module
buildSimpleTorrentInfo now more safe for shows that lack information
Added compatibility for Trakt usernames with non ASCII characters
Created new regex method for identifying files inside a pack
Premiumize resolver now uses regex method
Real Debrid resolver now uses regex method
Reworked RD cache check method to use new new methods created
Cleaned up Real Debrid resolver method
Cleaned up Premiumize resolver method
Genre lists now use the trending endpoint to provide more current/relevant titles
Fix possible double resolving of source in source select if not using auto-try next source
Fixed Play from random point not clearing playing items from playlist

Changelog 1.6.7:
Fix season sort due to stringed season number from TMDb module

Changelog 1.6.6:
Fix Fanart.tv call for movies

Changelog 1.6.5:
Fixed shows not syncing due to oddly formatted season information
Fix MyFiles link resolving
Fix All Debrid menu structuring in MyFiles
Added more filtering to cache assist to provide a more relevant source
Moved TMDb indexer to default meta provider for show items
Added try/except/finally to _remove_old_meta_items in sync activities to ensure database cursor is closed on failure

Changelog 1.6.4:
Trakt requests now automatically re-try in the event of remote server failures
Fixed issue with some movies not being marked as collected during sync
Catch stringed NoneType values in database.py
Resolver now returns None if cancelled, regardless if resolving was successful
File size limits are now enabled by default (10GB)
Fixed settings cleanup method (missmatch settings error)
Fixed MyFiles for All Debrid
Seperated cloud services within MyFiles

Changelog 1.6.3:
Fixed backwards compatibility for older Seren list urls
Movie titles now confirm against IMDB before scrape
Stop triggering Oauth refresh on 401 errors
Next up sort style now requires Trakt Auth